# ChangeLog for dev-python/astropy
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/astropy/ChangeLog,v 1.12 2013/07/12 22:17:51 bicatali Exp $

  12 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> -astropy-0.1-r1.ebuild,
  astropy-0.2.3.ebuild, metadata.xml:
  Hack fix for cfitsio 3.350 change of API

*astropy-0.2.3 (31 May 2013)

  31 May 2013; Justin Lecher <jlec@gentoo.org> +astropy-0.2.3.ebuild,
  metadata.xml:
  Version BUmp

  22 May 2013; Patrick Lauer <patrick@gentoo.org> astropy-0.2.1.ebuild:
  (Re-)Adding python-3.3 to python_targets

  22 May 2013; Patrick Lauer <patrick@gentoo.org> astropy-0.2.1.ebuild:
  Removing python3.3 from python_targets until h5py catches up

*astropy-0.2.1 (23 Apr 2013)

  23 Apr 2013; Sébastien Fabbro <bicatali@gentoo.org> +astropy-0.2.1.ebuild,
  metadata.xml:
  Version bump

  08 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> astropy-0.1-r1.ebuild:
  Blocking pyfits and vo (bug #426822 and bug #429148)

  27 Jun 2012; Sebastien Fabbro <fabbros@gentoo.org> astropy-0.1-r1.ebuild:
  keyword amd64-linux x86-linux

*astropy-0.1-r1 (21 Jun 2012)

  21 Jun 2012; Kacper Kowalik <xarthisius@gentoo.org> +astropy-0.1-r1.ebuild,
  +files/astropy-0.1-debundle_zlib.patch, -astropy-0.1.ebuild:
  Debundle zlib wrt #422657 by Diego Elio Pettenò <flameeyes@gentoo.org>, rename
  fitschecker to avoid collision with dev-python/pyfits wrt #422659 by Helmut
  Jarausch <jarausch@igpm.rwth-aachen.de>

  19 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> astropy-0.1.ebuild,
  metadata.xml:
  restrict python-3, added matplotlib for doc building, add longdescription

  19 Jun 2012; Kacper Kowalik <xarthisius@gentoo.org> astropy-0.1.ebuild:
  Depend on dev-python/pytest unconditionally

*astropy-0.1 (19 Jun 2012)

  19 Jun 2012; Kacper Kowalik <xarthisius@gentoo.org> +astropy-0.1.ebuild,
  +files/astropy-0.1-expat.patch, +metadata.xml:
  Initial import, ebuild written by me